src/styles/responsive.scss
// menu mobile variables
$hamburger-layer-color: var(--white_EAE) !default;
$hamburger-layer-width: 24px !default;
$hamburger-layer-height: 2px !default;

@import '@assets/hamburgers';

@media (max-width: 767px) {
  body {
    #__next {
      > div:first-of-type {
        header {
          > div {
            &:first-of-type {
              height: 55px;

              .headerContent {
                padding: 0 max(1.25rem, 1.57vw);

                > a {
                  max-width: min(11.25rem, 20.1vw);
                }

                button {
                  &:first-of-type {
                    &.hamburger {
                      transform: scale(0.6);

                      .hamburger-box {
                        display: block;
                        width: 24px;

                        .hamburger-inner {
                          &,
                          &:before,
                          &:after {
                            width: $hamburger-layer-width;
                            height: $hamburger-layer-height;
                            background: $hamburger-layer-color;
                          }
                        }
                      }

                      &.is-active {
                        .hamburger-inner {
                          &,
                          &:before,
                          &:after {
                            background: var(--pink_FE3);
                          }
                        }
                      }
                    }
                  }
                }
              }
            }

            &:last-of-type {
              margin-top: -1px;

              form > span > div {
                padding: max(1.25rem, 1.57vw);

                > #mob {
                  display: flex;

                  > div > div {
                    max-width: 76%;
                  }
                }
              }
            }
          }

          &:not(#home) {
            > div {
              .headerContent {
                > a {
                  margin: 0 2rem;
                }

                button {
                  &:first-of-type {
                    border-radius: 0;
                    background: transparent;
                    padding: 0;
                  }

                  &:disabled {
                    background: transparent;

                    svg g {
                      stroke: rgb(234, 234, 234);
                    }
                  }

                  margin: 0;
                }
              }
            }

            #navigation {
              ul {
                position: fixed;
                top: 54px;
                z-index: 1;

                min-width: 30%;
                max-height: 100%;
                height: 100vh;
                overflow: hidden;
                padding: max(1.25rem, 1.57vw) max(1.65rem, 1.57vw);
                background: var(--background);
                border-radius: 0 50px 50px 0;
                border-right: 1px solid var(--gray_313);
                transition: calc(var(--animate-duration) * 0.75);

                &.false {
                  max-width: 0;
                  max-height: 0;
                  padding: 0;
                  transition: calc(var(--animate-duration) * 0.75)
                    cubic-bezier(0.15, -0.4, 1, 0.01);
                }

                li {
                  a {
                    display: table;
                    font-size: 0.8rem;
                    text-transform: uppercase;
                    color: var(--white_EAE);
                    padding: 10px 10px 5px 0;

                    & + a {
                      margin-top: 10px;
                    }

                    &:before {
                      height: 2px;
                      background: var(--pink_FE3);
                    }
                  }
                }
              }

              span.true {
                position: fixed;
                top: 54px;

                width: 100vw;
                height: 100vh;
                opacity: 0.8;
                background: var(--black_181);
                cursor: crosshair;
              }
            }
          }
        }
      }

      main {
        &:not(#home) {
          margin-top: 54px;
        }

        &#home {
          section,
          aside {
            display: flex;
            justify-content: center;
          }

          section {
            position: relative;
            z-index: 1;

            background: #040714;
            margin-top: -8px;

            aside {
              position: static;

              align-items: center;
              flex-direction: column;

              text-align: center;

              h1 {
                font-size: min(4.5vw, 2.75rem);
              }

              p {
                font-size: min(2.7vw, 1.625rem);
              }

              a {
                min-width: 100%;
                font-size: min(1rem, 2.3vw);
                padding: min(1.8rem, 3vw) 20px;
              }
            }
          }
        }

        &#catalogue {
          > section {
            // first section
            &:first-of-type {
              > div {
                &:first-of-type {
                  > div > div {
                    max-width: 220px;
                    margin: min(3vw, 2.375rem) auto min(10.3vw, 8.25rem);

                    .carousel-arrow {
                      width: 0.938rem;

                      &.carousel-arrow-left {
                        left: -40px;
                      }

                      &.carousel-arrow-right {
                        right: -40px;
                      }
                    }

                    #mob > div {
                      display: block;

                      > a > div {
                        width: 100%;
                        max-width: 100% !important;
                        max-height: 100%;

                        &:after {
                          background-size: 5.5rem;
                        }
                      }

                      > div {
                        max-width: 100%;
                        margin-left: 0;

                        h4 {
                          font-size: 1.25rem;
                        }

                        h3 {
                          font-size: 0.875rem;
                          margin: 0;
                        }

                        span {
                          font-size: 0.875rem;

                          svg {
                            font-size: 1rem;
                          }
                        }
                      }
                    }
                  }
                }

                p {
                  font-size: min(1rem, 4.5vw);
                  text-align: center;

                  svg {
                    min-width: min(0.9rem, 3.5vw);
                    margin-right: min(1rem, 3.6vw);
                  }
                }
              }
            }

            // last section
            &:last-of-type {
              > div {
                padding: min(1.875rem, 5vw) max(1.25rem, 1.57vw);

                > div:first-of-type > div > div button,
                > div:first-of-type > div span,
                > button {
                  font-size: min(0.75rem, 4vw);
                }

                > div {
                  &:first-of-type {
                    max-height: 100%;

                    > div {
                      justify-content: center;

                      width: 100%;
                      max-width: 100%;
                      height: min(2.125rem, 10vw);

                      margin-right: 0;

                      > div {
                        margin-right: max(1.25rem, 1.57vw);

                        &.false {
                          ul {
                            padding: 0;
                            margin: 0;
                            border-width: 0;
                          }
                        }

                        button {
                          &:hover i,
                          &:focus i {
                            top: -2px;
                          }

                          i {
                            top: 2px;
                            padding: 2px;
                            width: min(1rem, 4.5vw);
                          }
                        }

                        ul {
                          margin-top: 4px;
                          border-width: min(0.625rem, 2vw);

                          label {
                            font-size: min(0.625rem, 3vw);
                          }
                        }
                      }
                    }
                  }

                  &:last-of-type {
                    grid-template-columns: 1fr;
                    margin: min(2.25rem, 10.8vw) 0 min(5rem, 22.9vw);

                    > div + div {
                      margin-top: min(2.5rem, 12vw);
                    }
                  }
                }
              }
            }
          }
        }

        &#selected-movie {
          section {
            // first section
            &:first-of-type {
              padding: 0 max(1.25rem, 1.57vw);

              > div > div {
                display: block;
                padding-top: min(3rem, 13.6vw);

                > div {
                  &:first-of-type {
                    display: block !important;

                    margin: auto !important;
                    max-width: 100% !important;
                    max-height: 29.375rem;
                  }

                  &:last-of-type {
                    margin-left: 0;

                    h1 {
                      font-size: min(2rem, 8vw);
                      margin: min(2rem, 8vw) 0 min(0.7rem, 3vw);
                    }

                    > div {
                      &:first-of-type {
                        font-size: min(1.2rem, 4.7vw);
                        margin: min(1.875rem, 2.4vw) 0 min(2.9rem, 11.2vw);

                        span {
                          align-items: center;

                          font-size: min(1.3rem, 5vw);

                          svg {
                            font-size: min(1.5rem, 5.5vw);
                            margin: 0 min(0.8rem, 2.8vw);
                          }
                        }
                      }

                      &:last-of-type {
                        span {
                          font-size: min(1.5rem, 5.5vw);
                        }

                        p {
                          font-size: min(1.2rem, 4.5vw);
                        }
                      }
                    }
                  }
                }
              }
            }

            // second section
            &:last-of-type {
              div {
                padding: 0;

                h4 {
                  display: table;
                  font-size: min(1.5rem, 5.5vw);
                  padding: min(1.25rem, 1.57vw) max(1.8rem, 7vw);

                  margin-bottom: min(2rem, 8vw);

                  &:after {
                    margin-top: 4px;
                    height: min(0.388rem, 0.6vw);
                  }
                }

                > a {
                  font-size: 10px;
                }
              }
            }
          }
        }
      }

      footer p {
        height: 60px;
      }
    }
  }
}

